--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<html>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Play Cribbage</title>
     <script src="./index.js"></script>
+  </head>
+  <body>
+    <!-- page content -->
   </body>
 </html>
