--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Play Cribbage</title>
-    <script src="./index.js"></script>
+    <script src="./index.ts"></script>
   </head>
   <body>
     <!-- page content -->
