--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Play Cribbage</title>
-    <script src="./index.ts"></script>
-  </head>
+<!-- index.html -->
+<html>
   <body>
-    <!-- page content -->
+    <div id="root"></div>
+    <script src="./index.tsx"></script>
   </body>
 </html>
