Add web UI title & HTML5 niceties

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<!-- index.html -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Play Cribbage</title>
+  </head>
   <body>
     <div id="root"></div>
     <script src="./index.tsx"></script>
